# demo-axum-spa

./: Cargo.toml  README.md
frontend/: .gitignore  index.html
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx
frontend/src/pages/: About.tsx  Home.tsx  NotFound.tsx
src/: main.rs
