[package]
name = "axum-solidjs-spa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
